--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
     "next": "^13.0.3",
+    "antd": "^4.24.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
